--- a/.gitignore
+++ b/.gitignore
@@ -4,28 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
 
-# storybook
-storybook-static
-
-# cypress
-cypress/screenshots
-cypress/videos
-
 # next.js
-/.next
-/out
-
-# next-sitemap
-public/robots.txt
-public/sitemap.xml
-public/sitemap-*.xml
-
-# cache
-.swc/
+/.next/
+/out/
 
 # production
 /build
@@ -33,19 +19,18 @@ public/sitemap-*.xml
 # misc
 .DS_Store
 *.pem
-Thumbs.db
 
 # debug
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # local env files
 .env*.local
 
-# local folder
-local
-
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
